# nfcee-fw

./: .gitignore  .gitmodules  CMakeLists.txt  Environment.cmake  README.md  main.c  nfc.c  usbcfg.c
board/: board.c  board.h  gpio_lld.c  gpio_lld.h
config/: halconf.h  mcuconf.h  trfconf.h
drivers/gpio/: gpio.h
drivers/gpio/ports/stm32/v2/: gpio_lld.c  gpio_lld.h
drivers/trf797x/: trf797x.c  trf797x.h  trf797x_conf.h  trf797x_device.c  trf797x_gpio.h  trf797x_initiator.c  trf797x_initiator.h  trf797x_lld.c  trf797x_lld.h
drivers/trf797x/include/: trf797x.h  trf797x_initiator.h
libs/newlib/: usleep.c
libs/nfc/: iso14443.c  iso14443a.c  nfc.c
libs/nfc/include/: iso14443.h  nfc.h
libs/trace/: trace.c  trace.h
tools/: .gdbinit  README.md  openocd.cfg  stm32f411rc.sh  stm32f4x.cfg
